--- a/templates/index.twig
+++ b/templates/index.twig
@@ -153,7 +153,7 @@
 </head>
 <body class="ltr">
 <div id="container">
-    <div id="modal">
+    <div id="modal" class="add-git">
         <div id="main">
             <div class="content">
                 <h1>Welcome</h1>
